--- a/mc851_gowin_project/impl/gwsynthesis/mc851_gowin_project_syn_resource.html
+++ b/mc851_gowin_project/impl/gwsynthesis/mc851_gowin_project_syn_resource.html
@@ -32,16 +32,16 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td class="label">soc (C:/Users/Guilherme/Desktop/faculdade/mc851/mc851_gowin/mc851_gowin_project/src/soc.v)</td>
 <td align = "center">74</td>
 <td align = "center">-</td>
-<td align = "center">117</td>
+<td align = "center">126</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--cpu_inst
  (C:/Users/Guilherme/Desktop/faculdade/mc851/mc851_gowin/mc851_gowin_project/src/soc.v)</td>
-<td align = "center">306</td>
-<td align = "center">51</td>
-<td align = "center">980</td>
+<td align = "center">389</td>
+<td align = "center">116</td>
+<td align = "center">1222</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
@@ -59,27 +59,45 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
  (C:/Users/Guilherme/Desktop/faculdade/mc851/mc851_gowin/mc851_gowin_project/src/cpu.v)</td>
 <td align = "center">-</td>
 <td align = "center">32</td>
-<td align = "center">119</td>
+<td align = "center">120</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 </tr>
-<td class="label">&nbsp&nbsp&nbsp&nbsp|--mmu_inst
+<td class="label">&nbsp&nbsp&nbsp&nbsp|--rom_inst
  (C:/Users/Guilherme/Desktop/faculdade/mc851/mc851_gowin/mc851_gowin_project/src/soc.v)</td>
-<td align = "center">25</td>
-<td align = "center">-</td>
-<td align = "center">64</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">1</td>
 <td align = "center">-</td>
 </tr>
-<td class="label">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp|--rom_inst
- (C:/Users/Guilherme/Desktop/faculdade/mc851/mc851_gowin/mc851_gowin_project/src/mmu.v)</td>
+<td class="label">&nbsp&nbsp&nbsp&nbsp|--ram_inst
+ (C:/Users/Guilherme/Desktop/faculdade/mc851/mc851_gowin/mc851_gowin_project/src/soc.v)</td>
+<td align = "center">1</td>
 <td align = "center">-</td>
+<td align = "center">8</td>
+<td align = "center">-</td>
+<td align = "center">1</td>
+<td align = "center">-</td>
+</tr>
+<td class="label">&nbsp&nbsp&nbsp&nbsp|--btn_inst
+ (C:/Users/Guilherme/Desktop/faculdade/mc851/mc851_gowin/mc851_gowin_project/src/soc.v)</td>
+<td align = "center">2</td>
 <td align = "center">-</td>
 <td align = "center">3</td>
 <td align = "center">-</td>
-<td align = "center">1</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+</tr>
+<td class="label">&nbsp&nbsp&nbsp&nbsp|--led_inst
+ (C:/Users/Guilherme/Desktop/faculdade/mc851/mc851_gowin/mc851_gowin_project/src/soc.v)</td>
+<td align = "center">6</td>
+<td align = "center">-</td>
+<td align = "center">6</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
 <td align = "center">-</td>
 </tr>
 </table>
