--- a/mc851_gowin_project/impl/pnr/mc851_gowin_project.power.html
+++ b/mc851_gowin_project/impl/pnr/mc851_gowin_project.power.html
@@ -87,7 +87,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Mon Nov 27 20:40:49 2023
+<td>Fri Dec 01 16:16:44 2023
 </td>
 </tr>
 <tr>
@@ -100,15 +100,15 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <table class="summary_table">
 <tr>
 <td class="label">Total Power (mW)</td>
-<td>17.464</td>
+<td>18.191</td>
 </tr>
 <tr>
 <td class="label">Quiescent Power (mW)</td>
-<td>16.672</td>
+<td>16.882</td>
 </tr>
 <tr>
 <td class="label">Dynamic Power (mW)</td>
-<td>0.792</td>
+<td>1.309</td>
 </tr>
 <tr>
 <td class="label">Psram Power (mW)</td>
@@ -119,7 +119,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <table class="summary_table">
 <tr>
 <td class="label">Junction Temperature</td>
-<td>25.352</td>
+<td>25.367</td>
 </tr>
 <tr>
 <td class="label">Theta JA</td>
@@ -127,7 +127,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Max Allowed Ambient Temperature</td>
-<td>84.648</td>
+<td>84.633</td>
 </tr>
 </table>
 <h2><a name="Configure_Info">Configure Information:</a></h2>
@@ -196,30 +196,37 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td>VCC</td>
 <td>1.200</td>
-<td>0.468</td>
-<td>3.076</td>
-<td>4.253</td>
+<td>0.756</td>
+<td>3.075</td>
+<td>4.598</td>
 </tr>
 <tr>
 <td>VCCX</td>
 <td>2.500</td>
-<td>0.056</td>
+<td>0.094</td>
 <td>3.788</td>
-<td>9.609</td>
+<td>9.705</td>
 </tr>
 <tr>
 <td>VCCIO12</td>
 <td>1.200</td>
-<td>0.044</td>
-<td>1.500</td>
-<td>1.853</td>
+<td>0.035</td>
+<td>0.200</td>
+<td>0.282</td>
+</tr>
+<tr>
+<td>VCCIO18</td>
+<td>1.800</td>
+<td>0.047</td>
+<td>1.554</td>
+<td>2.883</td>
 </tr>
 <tr>
 <td>VCCIO33</td>
 <td>3.300</td>
 <td>0.012</td>
-<td>0.518</td>
-<td>1.750</td>
+<td>0.207</td>
+<td>0.723</td>
 </tr>
 </table>
 <h1><a name="Detail">Power Details</a></h1>
@@ -233,19 +240,19 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td>Logic</td>
-<td>0.298</td>
+<td>0.396</td>
 <td>NA</td>
 <td>6.250</td>
 </tr>
 <tr>
 <td>IO</td>
-<td>3.877
-<td>3.580
-<td>17.188
+<td>4.535
+<td>4.020
+<td>10.625
 </tr>
 <tr>
 <td>BSRAM</td>
-<td>0.193
+<td>0.395
 <td>NA</td>
 <td>NA</td>
 </tr>
@@ -259,12 +266,16 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td>soc</td>
-<td>0.491</td>
-<td>0.491(0.470)</td>
+<td>0.791</td>
+<td>0.791(0.769)</td>
+<tr>
+<td>soc/btn_inst/</td>
+<td>0.000</td>
+<td>0.000(0.000)</td>
 <tr>
 <td>soc/cpu_inst/</td>
-<td>0.267</td>
-<td>0.267(0.073)</td>
+<td>0.371</td>
+<td>0.371(0.073)</td>
 <tr>
 <td>soc/cpu_inst/alu_inst/</td>
 <td>0.049</td>
@@ -274,13 +285,17 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>0.024</td>
 <td>0.024(0.000)</td>
 <tr>
-<td>soc/mmu_inst/</td>
-<td>0.204</td>
-<td>0.204(0.194)</td>
+<td>soc/led_inst/</td>
+<td>0.001</td>
+<td>0.001(0.000)</td>
 <tr>
-<td>soc/mmu_inst/rom_inst/</td>
-<td>0.194</td>
-<td>0.194(0.000)</td>
+<td>soc/ram_inst/</td>
+<td>0.203</td>
+<td>0.203(0.000)</td>
+<tr>
+<td>soc/rom_inst/</td>
+<td>0.193</td>
+<td>0.193(0.000)</td>
 </table>
 <h2><a name="By_Clock_Domain">Power By Clock Domain:</a></h2>
 <table class="detail_table">
@@ -292,7 +307,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td>clk</td>
 <td>50.000</td>
-<td>0.495</td>
+<td>0.794</td>
 </tr>
 </table>
 </div><!-- content -->
